--- a/Calculadora.ipynb
+++ b/Calculadora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "c7fac233",
    "metadata": {},
    "outputs": [
@@ -12,19 +12,19 @@
      "text": [
       "Costo de fondearse con inversores de la BCBB:\n",
       "    TEM: 5.13%\n",
-      "    TEA: 83.81%\n",
+      "    TEA: 83.83%\n",
       "Costo de fondearse con pagares:\n",
       "    TEM: 6.21%\n",
       "    TEA: 108.22%\n",
       "Rendimiento de vender créditos:\n",
-      "    TEM: 6.32%\n",
-      "    TEA: 110.89%\n",
+      "    TEM: 6.36%\n",
+      "    TEA: 111.73%\n",
       "Rendimiento de vender cartera:\n",
-      "    TEM: 15.50%\n",
-      "    TEA: 477.45%\n",
+      "    TEM: 15.70%\n",
+      "    TEA: 489.63%\n",
       "Costo fondearse vendiendo cartera:\n",
-      "    TEM: 6.94%\n",
-      "    TEA: 126.10%\n"
+      "    TEM: 6.95%\n",
+      "    TEA: 126.44%\n"
      ]
     }
    ],
@@ -49,436 +49,11 @@
     "df, tea, tem = venta.flujo(fecha_vta=pd.Period.now('D') + 30, tna_desc=0.6, tna=1.71, plazo=9, colocacion=0.05, cobranza=0.04, iibb=0.07, fondeo=False)\n",
     "df, tea, tem = venta.flujo(fecha_vta=pd.Period.now('D') + 30, tna_desc=0.6, tna=1.71, plazo=9, colocacion=0.05, cobranza=0.04, iibb=0.07, fondeo=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "b36abbc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 $ 1,100,000.00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Capital</th>\n",
-       "      <th>Interés</th>\n",
-       "      <th>IVA</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>Cap. + Int.</th>\n",
-       "      <th>Val. Act.</th>\n",
-       "      <th>Bco.</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vto.</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2025-12-28</th>\n",
-       "      <td>$ 36,546.14</td>\n",
-       "      <td>$ 116,155.33</td>\n",
-       "      <td>$ 24,392.61</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 152,701.47</td>\n",
-       "      <td>$ 143,226.58</td>\n",
-       "      <td>$ 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-01-28</th>\n",
-       "      <td>$ 41,682.62</td>\n",
-       "      <td>$ 111,910.30</td>\n",
-       "      <td>$ 23,501.16</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 153,592.92</td>\n",
-       "      <td>$ 136,911.09</td>\n",
-       "      <td>$ 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-02-28</th>\n",
-       "      <td>$ 47,541.03</td>\n",
-       "      <td>$ 107,068.64</td>\n",
-       "      <td>$ 22,484.41</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 154,609.67</td>\n",
-       "      <td>$ 130,975.80</td>\n",
-       "      <td>$ 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-03-28</th>\n",
-       "      <td>$ 54,222.82</td>\n",
-       "      <td>$ 101,546.50</td>\n",
-       "      <td>$ 21,324.76</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 155,769.32</td>\n",
-       "      <td>$ 126,026.92</td>\n",
-       "      <td>$ 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-04-28</th>\n",
-       "      <td>$ 61,843.73</td>\n",
-       "      <td>$ 95,248.23</td>\n",
-       "      <td>$ 20,002.12</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 157,091.96</td>\n",
-       "      <td>$ 120,787.60</td>\n",
-       "      <td>$ 0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-05-28</th>\n",
-       "      <td>$ 70,535.74</td>\n",
-       "      <td>$ 88,064.75</td>\n",
-       "      <td>$ 18,493.59</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 158,600.49</td>\n",
-       "      <td>$ 116,084.23</td>\n",
-       "      <td>$ 144,184.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-06-28</th>\n",
-       "      <td>$ 80,449.39</td>\n",
-       "      <td>$ 79,871.64</td>\n",
-       "      <td>$ 16,773.05</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 160,321.03</td>\n",
-       "      <td>$ 111,518.31</td>\n",
-       "      <td>$ 146,492.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-07-28</th>\n",
-       "      <td>$ 91,756.39</td>\n",
-       "      <td>$ 70,527.02</td>\n",
-       "      <td>$ 14,810.67</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 162,283.41</td>\n",
-       "      <td>$ 107,455.87</td>\n",
-       "      <td>$ 149,124.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-08-28</th>\n",
-       "      <td>$ 104,652.56</td>\n",
-       "      <td>$ 59,869.03</td>\n",
-       "      <td>$ 12,572.49</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 164,521.59</td>\n",
-       "      <td>$ 103,529.93</td>\n",
-       "      <td>$ 152,126.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-09-28</th>\n",
-       "      <td>$ 119,361.27</td>\n",
-       "      <td>$ 47,713.07</td>\n",
-       "      <td>$ 10,019.74</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 167,074.34</td>\n",
-       "      <td>$ 99,917.09</td>\n",
-       "      <td>$ 155,550.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-10-28</th>\n",
-       "      <td>$ 136,137.25</td>\n",
-       "      <td>$ 33,848.63</td>\n",
-       "      <td>$ 7,108.20</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 169,985.88</td>\n",
-       "      <td>$ 96,770.55</td>\n",
-       "      <td>$ 159,455.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-11-28</th>\n",
-       "      <td>$ 155,271.06</td>\n",
-       "      <td>$ 18,035.56</td>\n",
-       "      <td>$ 3,787.46</td>\n",
-       "      <td>$ 177,094.08</td>\n",
-       "      <td>$ 173,306.62</td>\n",
-       "      <td>$ 93,763.22</td>\n",
-       "      <td>$ 163,910.01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Capital       Interés          IVA         Total  \\\n",
-       "Vto.                                                                \n",
-       "2025-12-28   $ 36,546.14  $ 116,155.33  $ 24,392.61  $ 177,094.08   \n",
-       "2026-01-28   $ 41,682.62  $ 111,910.30  $ 23,501.16  $ 177,094.08   \n",
-       "2026-02-28   $ 47,541.03  $ 107,068.64  $ 22,484.41  $ 177,094.08   \n",
-       "2026-03-28   $ 54,222.82  $ 101,546.50  $ 21,324.76  $ 177,094.08   \n",
-       "2026-04-28   $ 61,843.73   $ 95,248.23  $ 20,002.12  $ 177,094.08   \n",
-       "2026-05-28   $ 70,535.74   $ 88,064.75  $ 18,493.59  $ 177,094.08   \n",
-       "2026-06-28   $ 80,449.39   $ 79,871.64  $ 16,773.05  $ 177,094.08   \n",
-       "2026-07-28   $ 91,756.39   $ 70,527.02  $ 14,810.67  $ 177,094.08   \n",
-       "2026-08-28  $ 104,652.56   $ 59,869.03  $ 12,572.49  $ 177,094.08   \n",
-       "2026-09-28  $ 119,361.27   $ 47,713.07  $ 10,019.74  $ 177,094.08   \n",
-       "2026-10-28  $ 136,137.25   $ 33,848.63   $ 7,108.20  $ 177,094.08   \n",
-       "2026-11-28  $ 155,271.06   $ 18,035.56   $ 3,787.46  $ 177,094.08   \n",
-       "\n",
-       "             Cap. + Int.     Val. Act.          Bco.  \n",
-       "Vto.                                                  \n",
-       "2025-12-28  $ 152,701.47  $ 143,226.58        $ 0.00  \n",
-       "2026-01-28  $ 153,592.92  $ 136,911.09        $ 0.00  \n",
-       "2026-02-28  $ 154,609.67  $ 130,975.80        $ 0.00  \n",
-       "2026-03-28  $ 155,769.32  $ 126,026.92        $ 0.00  \n",
-       "2026-04-28  $ 157,091.96  $ 120,787.60        $ 0.00  \n",
-       "2026-05-28  $ 158,600.49  $ 116,084.23  $ 144,184.18  \n",
-       "2026-06-28  $ 160,321.03  $ 111,518.31  $ 146,492.01  \n",
-       "2026-07-28  $ 162,283.41  $ 107,455.87  $ 149,124.21  \n",
-       "2026-08-28  $ 164,521.59  $ 103,529.93  $ 152,126.35  \n",
-       "2026-09-28  $ 167,074.34   $ 99,917.09  $ 155,550.44  \n",
-       "2026-10-28  $ 169,985.88   $ 96,770.55  $ 159,455.79  \n",
-       "2026-11-28  $ 173,306.62   $ 93,763.22  $ 163,910.01  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Capital</th>\n",
-       "      <th>Descuento</th>\n",
-       "      <th>Percibido</th>\n",
-       "      <th>Interés</th>\n",
-       "      <th>Total</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Emisión</th>\n",
-       "      <th>Vto.</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2025-11-19</th>\n",
-       "      <th>2026-05-18</th>\n",
-       "      <td>$ 1,386,967.19</td>\n",
-       "      <td>$ 1,313,143.35</td>\n",
-       "      <td>$ 1,295,774.24</td>\n",
-       "      <td>$ 343,216.10</td>\n",
-       "      <td>$ 1,730,183.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-05-18</th>\n",
-       "      <th>2026-11-14</th>\n",
-       "      <td>$ 1,100,000.00</td>\n",
-       "      <td>$ 1,041,450.51</td>\n",
-       "      <td>$ 1,027,675.11</td>\n",
-       "      <td>$ 272,203.78</td>\n",
-       "      <td>$ 1,372,203.78</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              Capital       Descuento       Percibido  \\\n",
-       "Emisión    Vto.                                                         \n",
-       "2025-11-19 2026-05-18  $ 1,386,967.19  $ 1,313,143.35  $ 1,295,774.24   \n",
-       "2026-05-18 2026-11-14  $ 1,100,000.00  $ 1,041,450.51  $ 1,027,675.11   \n",
-       "\n",
-       "                            Interés           Total  \n",
-       "Emisión    Vto.                                      \n",
-       "2025-11-19 2026-05-18  $ 343,216.10  $ 1,730,183.29  \n",
-       "2026-05-18 2026-11-14  $ 272,203.78  $ 1,372,203.78  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$ 1,070,842.98\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Flujo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2025-11-19</th>\n",
-       "      <td>$ 1,287,999.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2026-05-18</th>\n",
-       "      <td>$ -1,049,617.55</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Flujo\n",
-       "2025-11-19   $ 1,287,999.59\n",
-       "2026-05-18  $ -1,049,617.55"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tna = 1.71\n",
-    "plazo = 12\n",
-    "\n",
-    "gracia = 2\n",
-    "cap = 10**6\n",
-    "fecha = pd.Period.now('D')\n",
-    "\n",
-    "colocacion = 0.05\n",
-    "cobranza = 0.04\n",
-    "iibb = 0.07\n",
-    "\n",
-    "fecha_vta = fecha + 30\n",
-    "tna_desc = 0.6\n",
-    "\n",
-    "tamar = 0.53\n",
-    "tna_pagare = 0.09\n",
-    "plazo_pagare = 180\n",
-    "\n",
-    "df_ctas = credito.nuevo(tna, plazo, gracia, cap, fecha)\n",
-    "df_ctas = df_ctas.reset_index(level='Nro_Cuota')\n",
-    "df_ctas['Cap. + Int.'] = df_ctas[['Capital', 'Interés']].sum(axis=1)\n",
-    "df_ctas['Val. Act.'] = df_ctas.apply(lambda row: row['Cap. + Int.']/(1+tna_desc/365)**(row.name - fecha_vta).n, axis=1) \n",
-    "val_act = df_ctas['Val. Act.'].sum()\n",
-    "\n",
-    "precio = 1 / (1 + (tna/365 * plazo))\n",
-    "der_mer = d_mercado * min(plazo_pagare, 90) / 90 * 1.21\n",
-    "gst_arancel = arancel * min(plazo_pagare, 365) / 365 * 1.21\n",
-    "\n",
-    "df_pagare = pd.DataFrame(columns=['Emisión', 'Vto.', 'Capital', 'Descuento', 'Percibido', 'Interés', 'Total'])\n",
-    "\n",
-    "\n",
-    "def nuevo_pagare(df_pagare: pd.DataFrame, capital: float, emision) -> pd.DataFrame:\n",
-    "    vto_pag = emision + plazo_pagare\n",
-    "    df_pagare.loc[len(df_pagare), :] = pd.Series({\n",
-    "        'Emisión'  : emision,\n",
-    "        'Vto.'     : vto_pag,\n",
-    "        'Capital'  : capital,\n",
-    "        'Descuento': capital * precio,\n",
-    "        'Percibido': capital * precio * (1-der_mer-gst_arancel),\n",
-    "        'Interés'  : capital * precio * tamar/365 * plazo_pagare,\n",
-    "        'Total'    : capital * (1 + precio * tamar/365 * plazo_pagare)})\n",
-    "    \n",
-    "    return df_pagare\n",
-    "\n",
-    "df_pagare = nuevo_pagare(df_pagare, val_act, fecha_vta)\n",
-    "\n",
-    "df = pd.DataFrame()\n",
-    "\n",
-    "df.loc[fecha_vta, 'Flujo'] = df_pagare.at[0, 'Percibido'] * (1-com_gst_bco)  # type: ignore\n",
-    "\n",
-    "df_ctas['Bco.']  = df_ctas['Total'] * (1-cobranza) * (1-com_gst_bco)\n",
-    "df_ctas['Bco.'] -= df_ctas['IVA'] * (1+com_gst_bco)\n",
-    "df_ctas['Bco.'] -= df_ctas['Interés'] * iibb * (1+com_gst_bco)\n",
-    "\n",
-    "adeudado = df_pagare.at[len(df_pagare)-1, 'Capital']\n",
-    "\n",
-    "vto_pag = df_pagare.at[len(df_pagare)-1, 'Vto.']\n",
-    "df.loc[vto_pag, 'Flujo'] = -df_pagare.at[0, 'Total'] * (1+com_gst_bco) + df_ctas.loc[df_ctas.index < vto_pag, 'Bco.'].sum() * (1-com_gst_bco) # type: ignore\n",
-    "df_ctas.loc[df_ctas.index < vto_pag, 'Bco.'] = 0.0\n",
-    "\n",
-    "dig = 5\n",
-    "cap_pag = np.ceil(-df.loc[vto_pag, 'Flujo'] / 10**dig) * 10**dig # type: ignore\n",
-    "print(dig, f'$ {cap_pag:,.2f}')\n",
-    "while abs(cap_pag + df.loc[vto_pag, 'Flujo']) > 10**dig: # type: ignore\n",
-    "    dig -= 1\n",
-    "    cap_pag = np.ceil(-df.loc[vto_pag, 'Flujo'] / 10**dig) * 10**dig # type: ignore\n",
-    "\n",
-    "df_pagare = nuevo_pagare(df_pagare, cap_pag, vto_pag)\n",
-    "# df.loc[vto_pag, 'Flujo'] += df_pagare.at[len(df_pagare)-1, 'Percibido'] * (1-com_gst_bco) # type: ignore\n",
-    "\n",
-    "df_ctas.drop(columns=['Nro_Cuota'], inplace=True)\n",
-    "display(df_ctas.map('$ {:,.2f}'.format))\n",
-    "df_pagare.set_index(['Emisión', 'Vto.'], inplace=True)\n",
-    "display(df_pagare.map('$ {:,.2f}'.format))\n",
-    "print(f'$ {df_ctas['Bco.'].sum():,.2f}')\n",
-    "\n",
-    "df.map('$ {:,.2f}'.format)\n",
-    "\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
